--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "should": "~3.3.2",
     "async": "~0.9.0",
     "uglify-js": "~2.4.13",
-    "fs-extra": "~0.9.1"
+    "fs-extra": "~0.9.1",
+    "prompt": "~0.2.13",
+    "forge": "~2.2.0",
+    "node-forge": "~0.5.5",
+    "minimatch": "~0.3.0",
+    "ioslib": "~0.1.5"
   }
 }
