--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "description": "Developer testing for Titanium",
   "main": "index.js",
+  "bin": "./bin/tio2",
   "scripts": {
     "test": "npm test"
   },
