--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "tio2",
-  "version": "0.1.8",
-  "description": "Developer testing for Titanium",
-  "ingot": {
-    "type": "plugin",
-    "api": "1.0"
-  },
-  "main": "index.js",
-  "bin": "./bin/tio2",
-  "scripts": {
-    "test": "npm test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:appcelerator/tio2.git"
-  },
-  "keywords": [
-    "titanium",
-    "automation",
-    "android",
-    "iphone",
-    "ios",
-    "hyperloop"
-  ],
-  "author": "Jeff Haynie",
-  "license": "Apache-2",
-  "bugs": {
-    "url": "https://github.com/appcelerator/tio2/issues"
-  },
-  "dependencies": {
-    "ti-mocha": "~0.1.3",
-    "colors": "~0.6.2",
-    "commander": "~2.2.0",
-    "tiapp.xml": "~0.1.1",
-    "should": "~3.3.2",
-    "async": "~0.9.0",
-    "uglify-js": "~2.4.13",
-    "fs-extra": "~0.9.1",
-    "prompt": "~0.2.13",
-    "forge": "~2.2.0",
-    "node-forge": "~0.5.5",
-    "minimatch": "~0.3.0",
-    "ioslib": "~0.1.14",
-    "androidlib": "~0.1.5",
-    "wrench": "~1.5.8"
-  }
+	"name": "tio2",
+	"version": "0.2.0",
+	"description": "Developer testing for Titanium",
+	"ingot": {
+		"type": "plugin",
+		"api": "1.0"
+	},
+	"main": "index.js",
+	"bin": "./bin/tio2",
+	"scripts": {
+		"test": "npm test"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git@github.com:appcelerator/tio2.git"
+	},
+	"keywords": [
+		"titanium",
+		"automation",
+		"android",
+		"iphone",
+		"ios",
+		"hyperloop"
+	],
+	"author": "Jeff Haynie",
+	"license": "Apache-2",
+	"bugs": {
+		"url": "https://github.com/appcelerator/tio2/issues"
+	},
+	"dependencies": {
+		"androidlib": "~0.1.7",
+		"async": "~0.9.0",
+		"colors": "~0.6.2",
+		"commander": "~2.3.0",
+		"ejs": "~1.0.0",
+		"ioslib": "~0.1.14",
+		"longjohn": "~0.2.4",
+		"node-appc": "~0.2.15",
+		"should": "~4.0.4",
+		"sprintf": "~0.1.3",
+		"temp": "~0.8.0",
+		"ti-mocha": "~0.1.3",
+		"tiapp.xml": "~0.2.0",
+		"uglify-js": "~2.4.15",
+		"winston": "~0.7.3",
+		"wrench": "~1.5.8"
+	}
 }
