--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
 	"dependencies": {
 		"androidlib": "~0.1.7",
 		"async": "~0.9.0",
+		"cli-table": "~0.3.0",
 		"colors": "~0.6.2",
 		"commander": "~2.3.0",
 		"ejs": "~1.0.0",
-		"ioslib": "~0.1.14",
+		"ioslib": "~0.1.15",
 		"longjohn": "~0.2.4",
 		"node-appc": "~0.2.15",
 		"should": "~4.0.4",
+		"source-map": "~0.1.37",
 		"sprintf": "~0.1.3",
 		"temp": "~0.8.0",
 		"ti-mocha": "~0.1.3",
