--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
 
 install:
  
+ - sudo npm install -g titanium
  - titanium login travisci@appcelerator.com travisci
  - titanium sdk install latest --no-progress-bars
  - npm install
