--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
  - export ANDROID_SDK=$ANDROID_HOME
  - titanium config android.sdkPath $ANDROID_HOME
 
- - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
+ - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools:${ANDROID_HOME}/build-tools
   
  - echo "Installing and configuring Android SDK + Tools"
 
