--- a/.travis.yml
+++ b/.travis.yml
@@ -27,15 +27,10 @@ install:
  - echo "Installing and configuring Android SDK + Tools"
 
  - # Install required Android components.
- - echo yes | android -s update sdk --no-ui --all --filter platform-tools
- - echo yes | android -s update sdk --no-ui --all --filter tools
- - echo yes | android -s update sdk --no-ui --all --filter build-tools-22.0.0
- - echo yes | android -s update sdk --no-ui --all --filter extra-android-support 
- - echo yes | android -s update sdk --no-ui --all --filter android-19
- - echo yes | android -s update sdk --no-ui --all --filter addon-google_apis-google-19
- - echo yes | android -s update sdk --no-ui --all --filter sys-img-armeabi-v7a-android-19
+ - echo yes | android -s update sdk --no-ui --all --filter platform-tools,tools,build-tools-23.0.0,extra-android-support,android-23,addon-google_apis-google-23,sys-img-armeabi-v7a-android-23
+
  - android list targets
- - echo no | android create avd --force -n test -t android-19 --abi default/armeabi-v7a
+ - echo no | android create avd --force -n test -t android-23 --abi default/armeabi-v7a
 
  - cd $TRAVIS_BUILD_DIR
 
