add brew update to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: objective-c
 install:
 
  - # Need to install jq to process the JSON
+ - brew update
  - brew install jq # process JSON 
 
  - sudo npm install -g titanium
